apps/student-service/frontend/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service-frontend-metrics
  namespace: student-service
  labels:
    app.kubernetes.io/name: student-service-frontend
    app.kubernetes.io/component: metrics
spec:
  selector:
    app.kubernetes.io/name: student-service-frontend
    app.kubernetes.io/component: web
  ports:
    - name: metrics
      port: 9113
      targetPort: metrics
